# rust_data_analytics

./: .env  .gitignore  Cargo.toml  Dockerfile  Justfile  docker-compose.yml  just.bash
configs/: acadian_infuse.json  csv01.json
src/: main.rs
src/acadian_infuse/: main.rs
src/csv01/: main.rs
src/example/: main.rs
src/utils/: main.rs
