[package]
name = "rust_data_analytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.28.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[build]
rustc-wrapper = "/usr/local/cargo/bin/sccache"
